# jsonld-lsp

./: Cargo.toml  README.md  index.html  package.json  prefix_cc.json
.github/workflows/: ci_pages  main.yml  pages.yml
_app/: version.json
_app/immutable/assets/: jsonld_language_server_bg.04feda7d.wasm
_app/immutable/chunks/: singletons.7c8d1351.js  singletons.e915e0a9.js
_app/immutable/entry/: app.6de0011e.js  start.b000cf06.js
_app/immutable/nodes/: 0.9c4f68c1.js  0.b536b4a3.js  1.1368cb96.js  1.9469b374.js  2.89c39db4.js
client/: package.json
client/src/: extension.ts
examples/: ap-sensoren-en-bemonstering.jsonld  context.jsonld  index.jsonld  json.rs  jsonld.rs
lsp-web/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
lsp-web/src/: app.html
lsp-web/src/lib/: jsonld.ts
lsp-web/src/lib/components/: JsonLdCode.svelte
lsp-web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/: backend.rs  bare.rs  contexts.rs  lib.rs  loader.rs  main.rs  model.rs  ns.rs  parent.rs  parser.rs  prefix.rs  semantics.rs  triple.rs  utils.rs  web.rs
src/lang/: common.rs  mod.rs
src/lang/jsonld/: mod.rs  parent.rs  parser.rs  tokenizer.rs
src/lang/turtle/: formatter.rs  mod.rs  model.rs  node.rs  parser.rs  parser2.rs  shacl.rs  token.rs  tokenizer.rs
src/lang/turtle/completion/: mod.rs  namespace.rs  shape.rs
src/lang/turtle/green/: class.rs  mod.rs  property.rs
src/turtle/: mod.rs  parser.rs
src/utils/: fetch.rs  loader.rs  mod.rs  turtle.rs  web_types.rs
vscode/: CHANGELOG.md  README.md  grammar.json  language-configuration.json  package-lock.json  package.json
vscode-jsonld/: package-lock.json  package.json
vscode-jsonld/server/: package.json
vscode-jsonld/server/src/: browserServerMain.ts
vscode-turtle/: README.md  language-configuration.json  package-lock.json  package.json  webpack.config.js
vscode-turtle/client/src/: browserClientMain.ts
vscode-turtle/server/: package-lock.json  package.json
vscode-turtle/server/src/: browserServerMain.ts
vscode/client/: package-lock.json  package.json
vscode/client/src/: browserClientMain.ts
vscode/server/: package-lock.json  tsconfig.json
vscode/server/src/: browserServerMain.ts
vscode/src/: extension.ts
