[package]
name = "jsonld-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
env_logger = "0.9.0"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0"}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"
json-ld = { version = "0.12.1", features = ["reqwest"] }
iref = "2.2.3"
locspan = "0.7.13"
async-recursion = "1.0.2"
smallstr = "0.3.0"


[[bin]]
name = "jsonld-language-server"
path = "bin/jsonld.rs"

[[bin]]
name = "turtle-language-server"
path = "bin/turtle.rs"

