[package]
name = "jsonld-language-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.0"
env_logger = "0.9.0"
ropey = "1.5.0"
serde_json = "1.0.96"
tokio = { version = "1.17.0", features = ["full"], optional=true }
tower-lsp = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
iref = "2.2.3"
locspan = "0.7.13"
async-recursion = "1.0.2"
smallstr = "0.3.0"
rdf-types = "0.14.2"
futures = "0.3.27"
json-ld = { version = "0.14" }
json-ld-syntax = "0.14.0"
json-syntax = "0.9.1"
mime = "0.3.16"
lsp-types = "0.94.0"
cfg-if = "1.0.0"
wasm-bindgen = { version = "0.2.86", features = ["serde", "serde-serialize", "serde_json"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.63"
reqwest = "0.11.18"
once_cell = "1.17.1"
bytes = "1.4.0"
hashbrown = "0.13.2"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.63"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[features]
default = ["bin"]
bin = ["tokio", "req"]
req = ["json-ld/reqwest"]


[[bin]]
name = "jsonld-language-server"
path = "bin/jsonld.rs"
required-features = ["bin"]

[profile.release]
debug = true

